set(SOURCES
    ivm/actions/SoAction.ivm
    ivm/actions/SoCallbackAction.ivm
    ivm/actions/SoGLRenderAction.ivm
    ivm/actions/SoGetBoundingBoxAction.ivm
    ivm/actions/SoGetMatrixAction.ivm
    ivm/actions/SoHandleEventAction.ivm
    ivm/actions/SoPickAction.ivm
    ivm/actions/SoRayPickAction.ivm
    ivm/actions/SoSearchAction.ivm
    ivm/actions/SoWriteAction.ivm
    ivm/basics/SbBool.ivm
    ivm/basics/SbBox2f.ivm
    ivm/basics/SbBox2s.ivm
    ivm/basics/SbBox3f.ivm
    ivm/basics/SbColor.ivm
    ivm/basics/SbCylinder.ivm
    ivm/basics/SbLine.ivm
    ivm/basics/SbMatrix.ivm
    ivm/basics/SbName.ivm
    ivm/basics/SbPList.ivm
    ivm/basics/SbPlane.ivm
    ivm/basics/SbRotation.ivm
    ivm/basics/SbSphere.ivm
    ivm/basics/SbString.ivm
    ivm/basics/SbTime.ivm
    ivm/basics/SbVec2f.ivm
    ivm/basics/SbVec2s.ivm
    ivm/basics/SbVec3f.ivm
    ivm/basics/SbVec4f.ivm
    ivm/basics/SbViewVolume.ivm
    ivm/basics/SbViewportRegion.ivm
    ivm/basics/SbXfBox3f.ivm
    ivm/components/SoXt.ivm
    ivm/components/SoXtClipboard.ivm
    ivm/components/SoXtComponent.ivm
    ivm/components/SoXtDirectionalLightEditor.ivm
    ivm/components/SoXtGLWidget.ivm
    ivm/components/SoXtLightSliderSet.ivm
    ivm/components/SoXtMaterialEditor.ivm
    ivm/components/SoXtMaterialList.ivm
    ivm/components/SoXtMaterialSliderSet.ivm
    ivm/components/SoXtPrintDialog.ivm
    ivm/components/SoXtRenderArea.ivm
    ivm/components/SoXtResource.ivm
    ivm/components/SoXtSliderSet.ivm
    ivm/components/SoXtSliderSetBase.ivm
    ivm/components/SoXtTransformSliderSet.ivm
    ivm/details/SoConeDetail.ivm
    ivm/details/SoCubeDetail.ivm
    ivm/details/SoCylinderDetail.ivm
    ivm/details/SoDetail.ivm
    ivm/details/SoDetailList.ivm
    ivm/details/SoFaceDetail.ivm
    ivm/details/SoLineDetail.ivm
    ivm/details/SoNodeKitDetail.ivm
    ivm/details/SoPointDetail.ivm
    ivm/details/SoTextDetail.ivm
    ivm/devices/SoXtDevice.ivm
    ivm/devices/SoXtInputFocus.ivm
    ivm/devices/SoXtKeyboard.ivm
    ivm/devices/SoXtMouse.ivm
    ivm/devices/SoXtSpaceball.ivm
    ivm/draggers/SoCenterballDragger.ivm
    ivm/draggers/SoDirectionalLightDragger.ivm
    ivm/draggers/SoDragPointDragger.ivm
    ivm/draggers/SoDragger.ivm
    ivm/draggers/SoHandleBoxDragger.ivm
    ivm/draggers/SoJackDragger.ivm
    ivm/draggers/SoPointLightDragger.ivm
    ivm/draggers/SoRotateCylindricalDragger.ivm
    ivm/draggers/SoRotateDiscDragger.ivm
    ivm/draggers/SoRotateSphericalDragger.ivm
    ivm/draggers/SoScale1Dragger.ivm
    ivm/draggers/SoScale2Dragger.ivm
    ivm/draggers/SoScale2UniformDragger.ivm
    ivm/draggers/SoScaleUniformDragger.ivm
    ivm/draggers/SoSpotLightDragger.ivm
    ivm/draggers/SoTabBoxDragger.ivm
    ivm/draggers/SoTabPlaneDragger.ivm
    ivm/draggers/SoTrackballDragger.ivm
    ivm/draggers/SoTransformBoxDragger.ivm
    ivm/draggers/SoTransformerDragger.ivm
    ivm/draggers/SoTranslate1Dragger.ivm
    ivm/draggers/SoTranslate2Dragger.ivm
    ivm/engines/SoBoolOperation.ivm
    ivm/engines/SoCalculator.ivm
    ivm/engines/SoComposeMatrix.ivm
    ivm/engines/SoComposeRotation.ivm
    ivm/engines/SoComposeRotationFromTo.ivm
    ivm/engines/SoComposeVec2f.ivm
    ivm/engines/SoComposeVec3f.ivm
    ivm/engines/SoComposeVec4f.ivm
    ivm/engines/SoComputeBoundingBox.ivm
    ivm/engines/SoConcatenate.ivm
    ivm/engines/SoCounter.ivm
    ivm/engines/SoDecomposeMatrix.ivm
    ivm/engines/SoDecomposeRotation.ivm
    ivm/engines/SoDecomposeVec2f.ivm
    ivm/engines/SoDecomposeVec3f.ivm
    ivm/engines/SoDecomposeVec4f.ivm
    ivm/engines/SoElapsedTime.ivm
    ivm/engines/SoEngine.ivm
    ivm/engines/SoEngineList.ivm
    ivm/engines/SoEngineOutput.ivm
    ivm/engines/SoEngineOutputList.ivm
    ivm/engines/SoGate.ivm
    ivm/engines/SoInterpolate.ivm
    ivm/engines/SoInterpolateFloat.ivm
    ivm/engines/SoInterpolateRotation.ivm
    ivm/engines/SoInterpolateVec2f.ivm
    ivm/engines/SoInterpolateVec3f.ivm
    ivm/engines/SoInterpolateVec4f.ivm
    ivm/engines/SoOnOff.ivm
    ivm/engines/SoOneShot.ivm
    ivm/engines/SoSelectOne.ivm
    ivm/engines/SoTimeCounter.ivm
    ivm/engines/SoTransformVec3f.ivm
    ivm/engines/SoTriggerAny.ivm
    ivm/errors/SoDebugError.ivm
    ivm/errors/SoError.ivm
    ivm/errors/SoMemoryError.ivm
    ivm/errors/SoReadError.ivm
    ivm/events/SoButtonEvent.ivm
    ivm/events/SoEvent.ivm
    ivm/events/SoKeyboardEvent.ivm
    ivm/events/SoLocation2Event.ivm
    ivm/events/SoMotion3Event.ivm
    ivm/events/SoMouseButtonEvent.ivm
    ivm/events/SoSpaceballButtonEvent.ivm
    ivm/fields/SoField.ivm
    ivm/fields/SoFieldContainer.ivm
    ivm/fields/SoFieldList.ivm
    ivm/fields/SoMFBitMask.ivm
    ivm/fields/SoMFBool.ivm
    ivm/fields/SoMFColor.ivm
    ivm/fields/SoMFEngine.ivm
    ivm/fields/SoMFEnum.ivm
    ivm/fields/SoMFFloat.ivm
    ivm/fields/SoMFInt32.ivm
    ivm/fields/SoMFMatrix.ivm
    ivm/fields/SoMFName.ivm
    ivm/fields/SoMFNode.ivm
    ivm/fields/SoMFPath.ivm
    ivm/fields/SoMFPlane.ivm
    ivm/fields/SoMFRotation.ivm
    ivm/fields/SoMFShort.ivm
    ivm/fields/SoMFString.ivm
    ivm/fields/SoMFTime.ivm
    ivm/fields/SoMFUInt32.ivm
    ivm/fields/SoMFUShort.ivm
    ivm/fields/SoMFVec2f.ivm
    ivm/fields/SoMFVec3f.ivm
    ivm/fields/SoMFVec4f.ivm
    ivm/fields/SoMField.ivm
    ivm/fields/SoSFBitMask.ivm
    ivm/fields/SoSFBool.ivm
    ivm/fields/SoSFColor.ivm
    ivm/fields/SoSFEngine.ivm
    ivm/fields/SoSFEnum.ivm
    ivm/fields/SoSFFloat.ivm
    ivm/fields/SoSFImage.ivm
    ivm/fields/SoSFInt32.ivm
    ivm/fields/SoSFMatrix.ivm
    ivm/fields/SoSFName.ivm
    ivm/fields/SoSFNode.ivm
    ivm/fields/SoSFPath.ivm
    ivm/fields/SoSFPlane.ivm
    ivm/fields/SoSFRotation.ivm
    ivm/fields/SoSFShort.ivm
    ivm/fields/SoSFString.ivm
    ivm/fields/SoSFTime.ivm
    ivm/fields/SoSFTrigger.ivm
    ivm/fields/SoSFUInt32.ivm
    ivm/fields/SoSFUShort.ivm
    ivm/fields/SoSFVec2f.ivm
    ivm/fields/SoSFVec3f.ivm
    ivm/fields/SoSFVec4f.ivm
    ivm/fields/SoSField.ivm
    ivm/general/SoBase.ivm
    ivm/general/SoBaseList.ivm
    ivm/general/SoByteStream.ivm
    ivm/general/SoCallbackList.ivm
    ivm/general/SoDB.ivm
    ivm/general/SoInput.ivm
    ivm/general/SoNodeKitPath.ivm
    ivm/general/SoNodeList.ivm
    ivm/general/SoOffscreenRenderer.ivm
    ivm/general/SoOutput.ivm
    ivm/general/SoPath.ivm
    ivm/general/SoPathList.ivm
    ivm/general/SoPickedPoint.ivm
    ivm/general/SoPickedPointList.ivm
    ivm/general/SoPrimitiveVertex.ivm
    ivm/general/SoTranReceiver.ivm
    ivm/general/SoTranSender.ivm
    ivm/general/SoType.ivm
    ivm/general/SoTypeList.ivm
    ivm/interaction/SoBoxHighlightRenderAction.ivm
    ivm/interaction/SoEventCallback.ivm
    ivm/interaction/SoInteraction.ivm
    ivm/interaction/SoLineHighlightRenderAction.ivm
    ivm/interaction/SoSceneManager.ivm
    ivm/interaction/SoSelection.ivm
    ivm/manips/SoCenterballManip.ivm
    ivm/manips/SoDirectionalLightManip.ivm
    ivm/manips/SoHandleBoxManip.ivm
    ivm/manips/SoJackManip.ivm
    ivm/manips/SoPointLightManip.ivm
    ivm/manips/SoSpotLightManip.ivm
    ivm/manips/SoTabBoxManip.ivm
    ivm/manips/SoTrackballManip.ivm
    ivm/manips/SoTransformBoxManip.ivm
    ivm/manips/SoTransformManip.ivm
    ivm/manips/SoTransformerManip.ivm
    ivm/nodekits/SoAppearanceKit.ivm
    ivm/nodekits/SoBaseKit.ivm
    ivm/nodekits/SoCameraKit.ivm
    ivm/nodekits/SoInteractionKit.ivm
    ivm/nodekits/SoLightKit.ivm
    ivm/nodekits/SoNodeKit.ivm
    ivm/nodekits/SoNodeKitListPart.ivm
    ivm/nodekits/SoNodekitCatalog.ivm
    ivm/nodekits/SoSceneKit.ivm
    ivm/nodekits/SoSeparatorKit.ivm
    ivm/nodekits/SoShapeKit.ivm
    ivm/nodekits/SoWrapperKit.ivm
    ivm/nodes/SoAnnotation.ivm
    ivm/nodes/SoAntiSquish.ivm
    ivm/nodes/SoArray.ivm
    ivm/nodes/SoAsciiText.ivm
    ivm/nodes/SoBaseColor.ivm
    ivm/nodes/SoBlinker.ivm
    ivm/nodes/SoCallback.ivm
    ivm/nodes/SoCamera.ivm
    ivm/nodes/SoClipPlane.ivm
    ivm/nodes/SoColorIndex.ivm
    ivm/nodes/SoComplexity.ivm
    ivm/nodes/SoCone.ivm
    ivm/nodes/SoCoordinate3.ivm
    ivm/nodes/SoCoordinate4.ivm
    ivm/nodes/SoCube.ivm
    ivm/nodes/SoCylinder.ivm
    ivm/nodes/SoDirectionalLight.ivm
    ivm/nodes/SoDrawStyle.ivm
    ivm/nodes/SoEnvironment.ivm
    ivm/nodes/SoFaceSet.ivm
    ivm/nodes/SoFile.ivm
    ivm/nodes/SoFont.ivm
    ivm/nodes/SoFontStyle.ivm
    ivm/nodes/SoGroup.ivm
    ivm/nodes/SoIndexedFaceSet.ivm
    ivm/nodes/SoIndexedLineSet.ivm
    ivm/nodes/SoIndexedNurbsCurve.ivm
    ivm/nodes/SoIndexedNurbsSurface.ivm
    ivm/nodes/SoIndexedShape.ivm
    ivm/nodes/SoIndexedTriangleStripSet.ivm
    ivm/nodes/SoInfo.ivm
    ivm/nodes/SoLOD.ivm
    ivm/nodes/SoLabel.ivm
    ivm/nodes/SoLevelOfDetail.ivm
    ivm/nodes/SoLight.ivm
    ivm/nodes/SoLightModel.ivm
    ivm/nodes/SoLineSet.ivm
    ivm/nodes/SoLinearProfile.ivm
    ivm/nodes/SoLocateHighlight.ivm
    ivm/nodes/SoMaterial.ivm
    ivm/nodes/SoMaterialBinding.ivm
    ivm/nodes/SoMatrixTransform.ivm
    ivm/nodes/SoMultipleCopy.ivm
    ivm/nodes/SoNode.ivm
    ivm/nodes/SoNonIndexedShape.ivm
    ivm/nodes/SoNormal.ivm
    ivm/nodes/SoNormalBinding.ivm
    ivm/nodes/SoNurbsCurve.ivm
    ivm/nodes/SoNurbsProfile.ivm
    ivm/nodes/SoNurbsSurface.ivm
    ivm/nodes/SoOrthographicCamera.ivm
    ivm/nodes/SoPackedColor.ivm
    ivm/nodes/SoPathSwitch.ivm
    ivm/nodes/SoPendulum.ivm
    ivm/nodes/SoPerspectiveCamera.ivm
    ivm/nodes/SoPickStyle.ivm
    ivm/nodes/SoPointLight.ivm
    ivm/nodes/SoPointSet.ivm
    ivm/nodes/SoProfile.ivm
    ivm/nodes/SoProfileCoordinate2.ivm
    ivm/nodes/SoProfileCoordinate3.ivm
    ivm/nodes/SoQuadMesh.ivm
    ivm/nodes/SoResetTransform.ivm
    ivm/nodes/SoRotation.ivm
    ivm/nodes/SoRotationXYZ.ivm
    ivm/nodes/SoRotor.ivm
    ivm/nodes/SoScale.ivm
    ivm/nodes/SoSeparator.ivm
    ivm/nodes/SoShape.ivm
    ivm/nodes/SoShapeHints.ivm
    ivm/nodes/SoShuttle.ivm
    ivm/nodes/SoSphere.ivm
    ivm/nodes/SoSpotLight.ivm
    ivm/nodes/SoSurroundScale.ivm
    ivm/nodes/SoSwitch.ivm
    ivm/nodes/SoText2.ivm
    ivm/nodes/SoText3.ivm
    ivm/nodes/SoTexture2.ivm
    ivm/nodes/SoTexture2Transform.ivm
    ivm/nodes/SoTextureCoordinate2.ivm
    ivm/nodes/SoTextureCoordinateBinding.ivm
    ivm/nodes/SoTextureCoordinateDefault.ivm
    ivm/nodes/SoTextureCoordinateEnvironment.ivm
    ivm/nodes/SoTextureCoordinateFunction.ivm
    ivm/nodes/SoTextureCoordinatePlane.ivm
    ivm/nodes/SoTransform.ivm
    ivm/nodes/SoTransformSeparator.ivm
    ivm/nodes/SoTransformation.ivm
    ivm/nodes/SoTranslation.ivm
    ivm/nodes/SoTriangleStripSet.ivm
    ivm/nodes/SoUnits.ivm
    ivm/nodes/SoVertexProperty.ivm
    ivm/nodes/SoVertexShape.ivm
    ivm/nodes/SoWWWAnchor.ivm
    ivm/nodes/SoWWWInline.ivm
    ivm/projectors/SbCylinderPlaneProjector.ivm
    ivm/projectors/SbCylinderProjector.ivm
    ivm/projectors/SbCylinderSectionProjector.ivm
    ivm/projectors/SbCylinderSheetProjector.ivm
    ivm/projectors/SbLineProjector.ivm
    ivm/projectors/SbPlaneProjector.ivm
    ivm/projectors/SbProjector.ivm
    ivm/projectors/SbSpherePlaneProjector.ivm
    ivm/projectors/SbSphereProjector.ivm
    ivm/projectors/SbSphereSectionProjector.ivm
    ivm/projectors/SbSphereSheetProjector.ivm
    ivm/sensors/SoAlarmSensor.ivm
    ivm/sensors/SoDataSensor.ivm
    ivm/sensors/SoDelayQueueSensor.ivm
    ivm/sensors/SoFieldSensor.ivm
    ivm/sensors/SoIdleSensor.ivm
    ivm/sensors/SoNodeSensor.ivm
    ivm/sensors/SoOneShotSensor.ivm
    ivm/sensors/SoPathSensor.ivm
    ivm/sensors/SoSensor.ivm
    ivm/sensors/SoTimerQueueSensor.ivm
    ivm/sensors/SoTimerSensor.ivm
    ivm/viewers/SoXtConstrainedViewer.ivm
    ivm/viewers/SoXtExaminerViewer.ivm
    ivm/viewers/SoXtFlyViewer.ivm
    ivm/viewers/SoXtFullViewer.ivm
    ivm/viewers/SoXtPlaneViewer.ivm
    ivm/viewers/SoXtViewer.ivm
    ivm/viewers/SoXtWalkViewer.ivm
)

set(OUTPUTS "")
foreach(file ${SOURCES})
    get_filename_component(basename ${file} NAME_WE)
    set(OUTPUTS ${OUTPUTS} ${CMAKE_CURRENT_BINARY_DIR}/${basename}.3iv)
    add_custom_command(OUTPUT ${CMAKE_CURRENT_BINARY_DIR}/${basename}.3iv
        COMMAND bash -c "$<TARGET_FILE:ivman> `../../ivman/makeManDirs ${basename}` > ${CMAKE_CURRENT_BINARY_DIR}/${basename}.3iv"
        VERBATIM
        DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${file} ${CMAKE_CURRENT_SOURCE_DIR}/../ivman/makeManDirs ivman
        COMMENT "Creating ${basename}.3iv"
        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/ivm)
endforeach()
add_custom_target(run ALL DEPENDS ${OUTPUTS})

install(FILES ${OUTPUTS} DESTINATION man/man3 COMPONENT devel)

